# esp32-ambient-matrix-lamp

./: .clang-format  .gitignore  .uncrustify.cfg  AGENTS.md  CMakeLists.txt  Makefile  README.md  SOLDERING.md  idea.md  implementation.md
.codex/: hooks.json
.playwright-mcp/: page-2026-07-16T09-43-33-579Z.yml
docs/: gyver_analysis.md
docs/agent-status-lamp/: README.md  home-assistant-input-select.yaml  home-assistant-mvp-plan.md  (+2 more)
effects-core/: CMakeLists.txt  library.json
effects-core/include/ambient_matrix/: animation.h  canvas.h  effect_benchmark.h  effect_campfire.h  effect_color.h  effect_color_shift.h  effect_color_source.h  effect_comets.h  effect_confetti.h  effect_fire.h  effect_fire2020.h  effect_gradient.h  effect_matrix_rain.h  effect_noise.h  effect_particles.h  effect_patterns.h  effect_perlin.h  effect_rainbow.h  effect_scanner.h  effect_space.h  effect_starfield.h  effect_tornado.h  effect_v1_simple.h  engine.h  math_utils.h  matrix.h  noise.h  palette.h  types.h
effects-core/include/ambient_matrix/mic/: clap_detector.h  vol_analyzer.h
effects-core/src/: effect_benchmark.cpp  effect_campfire.cpp  effect_color.cpp  effect_color_shift.cpp  effect_comets.cpp  effect_confetti.cpp  effect_fire.cpp  effect_fire2020.cpp  effect_gradient.cpp  effect_matrix_rain.cpp  effect_noise.cpp  effect_particles.cpp  effect_patterns.cpp  effect_perlin.cpp  effect_rainbow.cpp  effect_scanner.cpp  effect_space.cpp  effect_starfield.cpp  effect_tornado.cpp  effect_v1_simple.cpp  engine.cpp  matrix.cpp  noise.cpp  palette.cpp
esphome/: ambient_matrix_esp32.yaml
preview/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_animation_timing.cpp  test_effect_color_source.cpp  test_xy_mapping.cpp
(+68 files in other folders)
